--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -20,12 +20,16 @@
 "global/breadcrumb",
 "global/footer",
 
-"school/navigation",
+"school/school__navigation",
 
 "site/title",
 "site/navigation",
+"site/site-features",
+
+"page/page__title",
 
 "enhance/buttons",
+"enhance/accordion",
 "../../../rex/src/scss/enhance/svg-icons",
 "../../../rex/src/scss/responsive/feature",
 // "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
