--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -1,7 +1,6 @@
 <footer class="global__footer">
-            <section class="blue">
                 <div class="inner">
-                    <div class="grid">
+                    <div class="grid  margins-off">
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
                                 <div class="media">
@@ -71,5 +70,4 @@
                 </ul>
                 <p class="pull-right">© 2004-2014 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a>
                 </p>
-            </section>
         </footer>
