--- a/src/templates/partials/school__navigation.hbs
+++ b/src/templates/partials/school__navigation.hbs
@@ -1,8 +1,10 @@
 <div class="school__navigation">
-    <h1 class="school__navigation__head"><a href="/undergrad/">Undergrad &#9656;</a></h1> 
+    <h1 class="school__navigation__head">Undergrad</h1> 
     <ul class="margins-off">
+{{!--     	<li><a href="https://www.bethel.edu"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a></li> --}}
+        <li><a href="https://www.bethel.edu">Home</a></li>
         <li><a href="/undergrad/about/" class="">About</a></li>
-        <li><a href="/undergrad/academics/index-new" class="">Academics</a></li>
+        <li><a href="/undergrad/academics/index-new" class="active">Academics</a></li>
         <li><a href="/undergrad/admissions/" class="">Admissions</a></li>
         <li><a href="/undergrad/financial-aid/" class="">Tuition &amp; Financial Aid</a></li>
         <li><a href="/undergrad/student-life/" class="">Student Life</a></li>
@@ -10,115 +12,5 @@
     </ul>
 </div>
 
-<ul class="accordion-list  accordion-list--open  first-level">
-                        
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>
-    <a class="accordion-list__link" href="index.php">Art &amp; Design Home</a>
-</li>
-                                        
-                                                
-                                                        <li class="accordion-list__item ">
-                        
-            
-        
-        
-                                                                                                                                                                                                                                                  
-                            <button class="accordion-list__button" href="#">+</button>
-            <a class="accordion-list__link" href="/undergrad/academics/art/majors-minors">Majors &amp; Minors</a>
-        
-                        </li>
-                                
-                                                        <ul class="accordion-list">
-                                    
-                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="majors-minors/art.php">Art</a>
-</li>
-                                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="majors-minors/fine-arts.php">Bachelor of Fine Arts (B.F.A.)</a>
-</li>
-                                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="majors-minors/graphic-design.php">Graphic Design</a>
-</li>
-                                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="majors-minors/arts-education.php">Visual Arts Education K-12</a>
-</li>
-                                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="majors-minors/art-minor.php">Art Minor</a>
-</li>
-                                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="majors-minors/graphic-design-minor.php">Graphic Design Minor</a>
-</li>
-                                                                                                </ul>
-                                                
-                                                        <li class="accordion-list__item ">
-                        
-            
-        
-        
-                                                                                                 
-                            <button class="accordion-list__button" href="#">+</button>
-            <a class="accordion-list__link" href="/undergrad/academics/art/scholarship">Performance Scholarship</a>
-        
-                        </li>
-                                
-                                                        <ul class="accordion-list">
-                                    
-                                                                    
-                                                                                <li class="accordion-list__item">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="scholarship/apply.php">Application</a>
-</li>
-                                                                                    
-                                                    </ul>
-                                                
-                                                                                <li class="accordion-list__item accordion--active">            
-        
-    <button class="accordion-list__button" href="#"> </button>    
-    <a class="accordion-list__link" href="faculty.php">Faculty</a>
-</li>
-                                                                                    
-                                        
-                    
-                                        
-                                        
-                    
-                    
-                                                        <li class="accordion-list__item ">
-                        
-            
-        
-        
-                                                                
-                            <button class="accordion-list__button" href="#"> </button>    
-            <a class="accordion-list__link" href="/undergrad/academics/art/news">News</a>
-                        
-                        </li>
-                                
-                                                        <ul class="accordion-list">
-                                    
-                                                                    
-                                                    </ul>
-                                                
-                    
-                    </ul>
+
+ {{!-- <small>&#9656;</small> --}}
