--- a/src/scss/global/_footer.scss
+++ b/src/scss/global/_footer.scss
@@ -1,6 +1,8 @@
 .global__footer {
     
-    background: #0069aa; 
+    background: #0069aa;
+    padding-top: 2em;
+    padding-bottom: 2em;
 
     p, li {
         color: #77cbff; 
