--- a/src/scss/global/_toolbox.scss
+++ b/src/scss/global/_toolbox.scss
@@ -1,8 +1,3 @@
-@-webkit-keyframes fadeIn {
-    from { opacity: 0; }
-      to { opacity: 1; }
-}
-
 @keyframes fadeIn {
     from { opacity: 0; }
       to { opacity: 1; }
@@ -10,12 +5,17 @@
 
 .global__toolbox {
     margin-top: 0;
-    transition: all 1s ease;
+    // transition: all 1s ease;
     display: none;
+
+    @include respond-min(60em){
+        display: block;
+    }
 }
 
 .menu-open .global__toolbox {
     display: block;
+    animation: fadeIn 300ms;
 }
 
 .global__toolbox__close-btn {
