--- a/src/scss/site/_navigation.scss
+++ b/src/scss/site/_navigation.scss
@@ -1,17 +1,22 @@
-.site__navigation ul {
+.site__navigation {
+    margin-top: 2em;
+    background: #fff;
+    margin-left: 1em;
+    padding-left: 0;
+}
+
+.site__navigation ul:first-child {
     background: #fff4cc;
     background: #fff;
-    border: 1px solid #ddd;
-    padding: 0 0 1em;
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 1em 0;
     margin: 2em .5em 1em;
 
     @include respond-min(60em){
         margin: 0;
     }
-}
-
-.site__navigation ul {
-  margin-top: 0;
 }
 
 .site__navigation__top-link {
@@ -25,6 +30,8 @@
     font-size: 140%;
     margin: 0;
     padding: .7em;
-    background: #ffc600;
+    // background: #ffc600;
+    background: rgba($bethel--blue,.1);
+    border: 1px solid #ddd;
     font-weight: 400;
 }
