--- a/src/templates/partials/school__navigation.hbs
+++ b/src/templates/partials/school__navigation.hbs
@@ -1,5 +1,5 @@
 <div class="school__navigation">
-    <h1 class="school__navigation__head">Undergrad</h1> 
+    <h1 class="school__navigation__head">Adult Undergrad</h1> 
     <ul class="margins-off">
 {{!--     	<li><a href="https://www.bethel.edu"><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home" xmlns="#"></use></svg></a></li> --}}
         <li><a href="https://www.bethel.edu">Home</a></li>
