--- a/src/templates/partials/site__title.hbs
+++ b/src/templates/partials/site__title.hbs
@@ -1,7 +1,7 @@
     <div class="site__title">
     <p class="site__title__button"><a href="#nav" data-scroll>☰ Menu</a></p>
         {{!-- <h1>Department of Anthropology and Sociology</h1> --}}
-        <h1>Undergraduate Academics</h1>
+        <h1>Adult Undergrad Academics</h1>
     </div>
 
     {{!-- &#9662 --}}
