--- a/src/scss/fizz.scss
+++ b/src/scss/fizz.scss
@@ -22,14 +22,15 @@
 
 "school/school__navigation",
 
-"site/title",
-"site/navigation",
+"site/site-title",
+"site/site-navigation",
 "site/site-features",
 
 "page/page__title",
 
 "enhance/buttons",
 "enhance/accordion",
+"enhance/off-canvas",
 "../../../rex/src/scss/enhance/svg-icons",
 "../../../rex/src/scss/responsive/feature",
 // "enhance/image-hover" // Symlinked to REX : ~/Sites/rex/src/scss/enhance/_image-hover.scss
