--- a/src/scss/site/_site-navigation.scss
+++ b/src/scss/site/_site-navigation.scss
@@ -1,16 +1,21 @@
 .site__navigation {
     margin-top: 2em;
+    // background: #fff;
+    // margin-left: 1em;
+    padding-left: 1em;
+    padding-right: 1em;
+}
+
+.site__navigation ul {
     background: #fff;
-    margin-left: 1em;
-    padding-left: 0;
 }
 
 .site__navigation ul:first-child {
     background: #fff4cc;
     background: #fff;
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
+    // border-left: 1px solid #ddd;
+    // border-right: 1px solid #ddd;
+    // border-bottom: 1px solid #ddd;
     padding: 1em 0;
     margin: 2em .5em 1em;
 
@@ -35,3 +40,13 @@
     border: 1px solid #ddd;
     font-weight: 400;
 }
+
+// .durr {
+//     @include respond-max(60em){
+//     display: none;
+// }
+// }
+
+// .durr.siteNav-open {
+//     display: block;
+// }
