--- a/src/templates/partials/global__footer.hbs
+++ b/src/templates/partials/global__footer.hbs
@@ -1,5 +1,9 @@
 <footer class="global__footer">
                 <div class="inner">
+                <h2 class="collapsible-heading">Show Footer</h2>
+<div class="collapsible-block">
+ 
+
                     <div class="grid  margins-off">
                         <div class="grid-cell u-medium-1-4">
                             <div class="grid-pad-1x">
@@ -56,9 +60,9 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            <section class="dark-blue bottom-nav">
-                <ul class="pull-left margins-off">
+            </div>
+
+{{!--                 <ul class="pull-left margins-off">
                     <li><svg class="svg-icon"><use xlink:href="../assets/icon-sprite/symbols.svg#home"></use></svg><a href="http://www.bethel.edu/about/maps-directions/">Home</a></li>
                     <li><a href="http://www.bethel.edu/about/">About</a></li>
                     <li><a href="http://www.bethel.edu/academics/">Academics</a></li>
@@ -67,7 +71,6 @@
                     <li><a href="http://www.bethel.edu/faith/">Faith</a></li>
                     <li><a href="http://athletics.bethel.edu/">Athletics</a></li>
                     <li><a href="http://www.bethel.edu/alumni/">Alumni</a></li>
-                </ul>
-                <p class="pull-right">© 2004-2014 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a>
-                </p>
+                </ul> --}}
+                <p><small>© 2004-2015 Bethel University | <a href="http://knowledgebase.its.bethel.edu/articles/41/">DMCA Notification</a></small></p>
         </footer>
