--- a/src/templates/partials/site__navigation.hbs
+++ b/src/templates/partials/site__navigation.hbs
@@ -1,5 +1,5 @@
-<nav id="nav">
-    <h1 class="site__navigation__title">Adult Undergrad Academics</h1>
+{{!-- <nav id="nav"> --}}
+    {{!-- <h1 class="site__navigation__title">Adult Undergrad Academics</h1> --}}
 
 <ul class="accordion-list  accordion-list--open  first-level">
 
@@ -102,4 +102,4 @@
 
 
 </ul>
-</nav>
+{{!-- </nav> --}}
