--- a/src/scss/site/_site-title.scss
+++ b/src/scss/site/_site-title.scss
@@ -1,19 +1,22 @@
+
 .site__title {
-  padding: .75em 1em .75em 0;
+  padding: 1.5em 1em;
+  // padding: 0;
   // text-align: center;
   // border-bottom: 1px solid $bethel--navy;
-  border-bottom: 1px solid #ddd;
-  position: sticky;
-  top: 0;
+  // border-bottom: 1px solid #ddd;
+  // position: sticky;
+  // top: 0;
   display: flex;
-  flex-direction: row;
+  // flex-direction: row;
   overflow: hidden;
   align-items: center;
   // justify-content: space-between;
   margin: 0;
-  background: rgba($bethel--blue, .1);
+  // background: rgba($bethel--blue, .1);
   // background: rgb(229,239,246);
-  // background: rgba($bethel--yellow, .1);
+  // background: #fff;
+  // background: rgba($bethel--yellow, .8);
   // background: #fff;
 
   @include respond-min(60em){
@@ -22,16 +25,20 @@
 }
 
 .site__title h1 {
-  font-size: 1.1rem; 
+  font-size: 1rem; 
   // font-family: $sentinel-ssm;
   // background: tomato;
   margin-bottom: 0;
   margin-top: 0;
   color: $bethel--navy;
+  // color: tomato;
   // margin-top: 0;
   // padding-right: 1em;
   // // flex-basis: 75%;
-  font-weight: 400;
+  font-weight: 500;
+  // text-transform: uppercase;
+  // width: 60%;
+  // float: left;
 }
 
 .site__title__button {
@@ -42,21 +49,23 @@
   // margin-top: 0;
   margin-bottom: 0;
   margin-top: 0;
-  padding: 1em 0;
+  padding: .5em 0;
   // // margin: .5em;
   // // flex: 0 0 25%;
   // white-space: nowrap;
   // display: inline-block;
-  margin-right: 1em;
+  // margin-right: .5em;
   font-family: $gotham;
   font-weight: 700;
   text-transform: uppercase;
+  // float:right;
+  // margin-left: 7em;
 }
 
 .site__title__button a {
   background: #ffc600;
   // // margin: 0 auto;
-  padding: 1em;
+  padding: 1em .75em;
   // border-radius: .3em;
   // display: inline-block;
   // display: inline-block;
