--- a/src/scss/typography/_typography.scss
+++ b/src/scss/typography/_typography.scss
@@ -5,12 +5,12 @@ body {
 	font-weight: 300;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, .h1,
+h2, .h2,
+h3, .h3,
+h4, .h4,
+h5, .h5,
+h6, .h6 {
 	font-family: $gotham;
 	font-weight: 700;
 	color: #333;
