--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -14,9 +14,23 @@ layout:default.hbs
 {{> school__navigation }}
 {{> site__title }}
 
+{{!-- <div class="off-canvas">
+	<div class="off-canvas--on">
+		{{> breadcrumb }}
+		{{> page__title }}
+	</div>
+
+	<div class="off-canvas--off">
+		{{> site__navigation }}
+	</div>
+	<div class="off-canvas--on">
+		{{> body }}
+	</div>
+</div> --}}
+
 <div class="inner">
-{{> breadcrumb }}
-{{> page__title }}
+{{!-- {{> breadcrumb }} --}}
+{{!-- {{> page__title }} --}}
 {{> body }}
 </div>
 
@@ -24,9 +38,9 @@ layout:default.hbs
 
 {{> global__footer }}
 
-<script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+{{!-- <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
 <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.min.js"></script>
+<script type="text/javascript" src="//cdn.jsdelivr.net/jquery.slick/1.3.14/slick.min.js"></script> --}}
 <script src="/js/bundle.js"></script>
 
 <script>
